<resources>
    <string name="app_name">ClosetCase</string>
    <string name="slogan_name">Welcome to Closet Case, \n your personal stylist!</string>
    <string name="find_outfit">Find Outfit</string>
    <string name="build_outfit">Build Outfit</string>
    <string name="manage_closet">Manage Closet</string>
    <string name="add_new">Add New</string>
    <string name="filter">Filter</string>
    <string name="todo">TODO</string>
    <string name="Complete">Complete</string>
    <string name="help_question">"?"</string>

    <!-- Filter Fragment Strings -->
    <string name="Filter_Fragment">Filter</string>
    <string name="Type">Type:</string>
    <string name="Pants">Pants</string>
    <string name="Shirts">Shirts</string>
    <string name="Color">Color:</string>
    <string name="Black">Black</string>
    <string name="Red">Red</string>
    <string name="Blue">Blue</string>
    <string name="Brown">Brown</string>
    <string name="Accept">Accept</string>

    <string-array name="colorArray">
        <item>Red</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Gray</item>
    </string-array>
    <string-array name="articleArray">
        <item>Pants</item>
        <item>Shirt</item>
    </string-array>
    <string-array name="patternArray">
        <item>Solid</item>
        <item>Plaid</item>
        <item>Stripes</item>
        <item>Polka Dots</item>
    </string-array>
    <string-array name="materialArray">
        <item>Cotton</item>
        <item>Denim</item>
        <item>Fleece</item>
    </string-array>


    <string name="Select">Select</string>

    <!-- Strings for the Delete Clothing Button -->
    <string name="DeleteQuestion">Are you sure you want to delete this?</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>

    <!-- Key used to access the preference file where the path for a particular picture is stored -->
    <string name="picture_path_key">picture</string>
    <!-- Preference File key.-->
    <string name="preference_file_name">edu.pitt.cs.cs1635.amp224.closetcase.PREFERENCE_FILE</string>
    <string name="id_key">id</string>
</resources>
